# Kage-Shiki

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  README.md  README_en.md  SESSION_STATE.md  pyproject.toml
.claude/: current-phase.md  settings.json
.claude/agents/: code-reviewer.md  design-architect.md  doc-writer.md  quality-auditor.md  requirement-analyst.md  task-decomposer.md  tdd-developer.md  test-runner.md
.claude/commands/: adr-create.md  auditing.md  building.md  daily.md  full-review.md  impact-analysis.md  pattern-review.md  planning.md  project-status.md  quick-load.md  quick-save.md  retro.md  security-review.md  ship.md  wave-plan.md
.claude/hooks/: _hook_utils.py  hook_utils.py  lam-stop-hook.py  notify-sound.py  post-tool-use.py  pre-compact.py  pre-tool-use.py
.claude/logs/: full-review-phase12-20260318.json
.claude/rules/: building-checklist.md  core-identity.md  decision-making.md  permission-levels.md  phase-rules.md  security-commands.md  spec-sync.md  test-result-output.md  upstream-first.md
.claude/states/: phase-1-mvp.json  phase-2-autonomy.json
docs/: MIGRATION-v4.4.1-COMPLETE.md
docs/adr/: 0001-lam-v4-immune-system-architecture.md  0002-model-routing-strategy.md  0003-stop-hook-implementation.md  0004-context7-vs-webfetch.md  0005-bash-read-commands-allow-list.md
docs/artifacts/: retro-lam-v4.4.1.md
docs/design/: gitleaks-integration-design.md  hooks-python-migration-design.md
docs/internal/: 00_PROJECT_STRUCTURE.md  02_DEVELOPMENT_FLOW.md  03_QUALITY_STANDARDS.md  (+6 more)
tests/: conftest.py
(+202 files in other folders)
