[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kage-shiki"
version = "0.2.0"
description = "影式 (Kage-Shiki) — 人格を持ち、記憶を引き継ぐ Windows 常駐テキストデスクトップマスコット"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "pystray>=0.19.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=kage_shiki --cov-report=term-missing --junitxml=.claude/test-results.xml"
markers = [
    "integration: Integration tests that use real threads/files",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.ruff.lint.isort]
known-first-party = ["kage_shiki"]

[tool.coverage.run]
source = ["kage_shiki"]

[tool.coverage.report]
show_missing = true
